Updated KMart Logo

--- a/cart.html
+++ b/cart.html
@@ -8,7 +8,7 @@
 </head>
 <body onload="loadCart()">
   <header class="navbar">
-    <h1>🛒KMart</h1>
+    <h1>🏬KMart</h1>
     <div class="nav-actions">
       <a href="products.html">🏠 Home</a>
       <button class="logout-btn" onclick="logout()">Logout</button>
