--- a/checkout.html
+++ b/checkout.html
@@ -9,7 +9,7 @@
 <body onload="loadCart()">
 
   <header class="navbar">
-    <h1>KMart</h1>
+    <h1>🏬KMart</h1>
     <div class="nav-actions">
       <a href="products.html">🏠 Home</a>
       <span>🛒 Cart (<span id="cart-count">0</span>)</span>
