--- a/products.html
+++ b/products.html
@@ -9,7 +9,7 @@
 <body onload="checkLogin()">
 
   <header class="navbar">
-    <h1>🛒KMart</h1>
+    <h1>🏬KMart</h1>
     <div class="nav-actions">
       <input type="text" id="search" placeholder="Search Products..." onkeyup="searchProduct()" />
       <a href="checkout.html" class="cart-link">🛒 Cart (<span id="cart-count">0</span>)</a>
